V1.0 ADDED ReaderController & rest